--- a/trac-env/templates/site.html
+++ b/trac-env/templates/site.html
@@ -59,52 +59,17 @@
 
     <!--! A more structured form of the ticket resolution, status and type attributes -->
     <div py:match="div[@id='content' and @class='ticket']" py:attrs="select('@*')">
-        <span class="statuses" py:match="span[@class='status']">
+        <span class="statuses" py:match="span[@class='trac-status']">
             <py:if test="ticket.type"><span class="type">${ticket.type}</span></py:if>
             <py:if test="ticket.status"><span class="status">${ticket.status}</span></py:if>
             <py:if test="ticket.resolution"><span class="resolution">${ticket.resolution}</span></py:if>
         </span>
+        <span py:match="span[@class='trac-type']" />
         <h1 py:match="h1">
             <span class="title">${select('text()')}</span>
             ${select('*|comment()')}
         </h1>
         ${select('*|comment()|text()')}
-    </div>
-
-    <!--! Genshi, like all write-your-logic-in-your-template languages, is
-          completely and utterly terrible. The context in which the variable
-          "change" occurs is completely lost and so our only option appears to
-          be to reproduce the entire loop. Goodie. -->
-    <div py:match="div[@id='changelog']" py:attrs="select('@*')">
-        <form py:for="change in changes" method="get" action="#comment" class="printableform">
-            <a href="#${'cnum' in change and 'comment:%d' % change.cnum or None}">
-                <h2 class="comment-number">${'cnum' in change and change.cnum or None}</h2>
-            </a>
-            <div class="change">
-                <h3 class="change" id="${'cnum' in change and 'comment:%d' % change.cnum or None}">
-                    <span class="threading" py:if="replies and 'cnum' in change"
-                        py:with="change_replies = replies.get(str(change.cnum), [])">
-                        <py:if test="change_replies or 'replyto' in change">
-                        <py:if test="'replyto' in change">
-                        in reply to: ${commentref('&uarr;&nbsp;', change.replyto)}
-                        <py:if test="change_replies">; </py:if>
-                        </py:if>
-                        <py:if test="change_replies">follow-up${len(change_replies) > 1 and 's' or ''}:
-                        <py:for each="reply in change_replies">
-                        ${commentref('&darr;&nbsp;', reply)}
-                        </py:for></py:if>
-                        </py:if>
-                        &nbsp;
-                    </span>
-                    Changed ${dateinfo(change.date)} ago by ${authorinfo(change.author)}
-                </h3>
-                <div py:if="'cnum' in change and can_append" class="inlinebuttons">
-                    <input type="hidden" name="replyto" value="${change.cnum}" />
-                    <input type="submit" value="Reply" title="Reply to comment ${change.cnum}" />
-                </div>
-                ${display_change(change)}
-            </div>
-        </form>
     </div>
 
     <!--! Don't allow replacing existing attachments, ever. -->
